--- a/XMLHttpRequest/data-uri.htm
+++ b/XMLHttpRequest/data-uri.htm
@@ -28,14 +28,14 @@
       client.send(null);
     });
   }
-  do_test('GET', "data:text/plain,Hello, World!");
+  do_test('GET', "data:text/plain,Hello,%20World!");
   do_test('GET', "data:text/plain;base64,SGVsbG8sIFdvcmxkIQ==", undefined, " (base64)");
-  do_test('GET', "data:text/html,Hello, World!", 'text/html');
-  do_test('GET', "data:text/html;charset=UTF-8,Hello, World!", 'text/html;charset=UTF-8');
-  do_test('GET', "data:image/png,Hello, World!", 'image/png');
-  do_test('POST', "data:text/plain,Hello, World!");
-  do_test('PUT', "data:text/plain,Hello, World!");
-  do_test('DELETE', "data:text/plain,Hello, World!");
-  do_test('HEAD', "data:text/plain,Hello, World!");
-  do_test('UNICORN', "data:text/plain,Hello, World!");
+  do_test('GET', "data:text/html,Hello,%20World!", 'text/html');
+  do_test('GET', "data:text/html;charset=UTF-8,Hello,%20World!", 'text/html;charset=UTF-8');
+  do_test('GET', "data:image/png,Hello,%20World!", 'image/png');
+  do_test('POST', "data:text/plain,Hello,%20World!");
+  do_test('PUT', "data:text/plain,Hello,%20World!");
+  do_test('DELETE', "data:text/plain,Hello,%20World!");
+  do_test('HEAD', "data:text/plain,Hello,%20World!");
+  do_test('UNICORN', "data:text/plain,Hello,%20World!");
 </script>
